gym and metros fixes
