# models/gyms/gym.go
@@ -1,7 +1,9 @@
 package gyms
 
 type Gym struct {
-	ID           int
-	MetroStation string
-	Address      string
+	ID          int
+	Address     string
+	Name        string
+	Description string
+	Metros      []*Metro `gorm:"many2many:gym2metro;foreignKey:ID;joinTableForeignKey:GymID;associationForeignKey:ID;associationJoinTableForeignKey:MetroID"`
 }
