# models/gyms/metro.go
@@ -1,0 +1,10 @@
+package gyms
+
+type Metro struct {
+	ID   int
+	Name string
+}
+
+func (m *Metro) TableName() string {
+	return "metros"
+}
